Add app-inbox read/delete

--- a/sample-js-sdk/public/index.html
+++ b/sample-js-sdk/public/index.html
@@ -68,6 +68,7 @@
       <div>Subtitle: {{:messageData.vars.Subtitle}}</div>
       <div>Delivered: {{:~dateTime(deliveryTimestamp)}}</div>
       <div>IsRead: {{:isRead}}</div>
+      <button class="btn-read" data-id="{{:id}}">Read</button><button class="btn-delete" data-id="{{:id}}">Delete</button>
     </p>
   </script>
 
